--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,7 @@
                 "kevinberg\\LaravelRolePerms\\LaravelRolePermsServiceProvider"
             ]
         }
+    },
+    "require-dev": {
     }
 }
